@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.8 2005/10/11 19:39:25 adrianp Exp $
+# $NetBSD: Makefile,v 1.9 2006/01/26 02:00:16 hiramatsu Exp $
 #
 
-DISTNAME=	Net-Pcap-0.05
+DISTNAME=	Net-Pcap-0.11
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	2
 CATEGORIES=	net perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Net/}
 
 MAINTAINER=	adrianp@NetBSD.org
-HOMEPAGE=	http://search.cpan.org/author/KCARNUT/Net-Pcap-0.05/Pcap.pm
+HOMEPAGE=	http://search.cpan.org/dist/Net-Pcap/
 COMMENT=	Perl interface to pcap(3) LBL packet capture library
 
 BUILDLINK_DEPENDS.libpcap+=	libpcap>=0.8.1
